fix info-color contrast

--- a/sass/src/dark/_variables.scss
+++ b/sass/src/dark/_variables.scss
@@ -1,5 +1,5 @@
 $bg-color: #101010 !default;
-$info-color: color('yellow', 'darken-4');
+$info-color: color('blue-grey', 'darken-4');
 
 $off-black: color('shades', 'white');
 
